--- a/groupem/templates/groupem/index.html
+++ b/groupem/templates/groupem/index.html
@@ -1,3 +1,5 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html >
   <head>
@@ -7,7 +9,7 @@
     
     
     
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="{% static 'groupem/style.css' %}">
 
     
     
