Link signup page but hyperref does not work yet

--- a/groupem/templates/groupem/signup.html
+++ b/groupem/templates/groupem/signup.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html >
   <head>
@@ -7,8 +8,7 @@
     
     
     
-        <link rel="stylesheet" href="css/style.css">
-
+        <link rel="stylesheet" href="{% static 'groupem/style.css' %}">
     
     
     
