--- a/groupem/templates/groupem/index.html
+++ b/groupem/templates/groupem/index.html
@@ -1,5 +1,4 @@
 {% load staticfiles %}
-
 <!DOCTYPE html>
 <html >
   <head>
@@ -22,13 +21,14 @@
 	<div class="container">
 		<h1>Welcome</h1>
 		
-		<form class="form">
+		<form action="" method="post" class="form">
+		  {% csrf_token %}
 			<input type="text" placeholder="Username">
 			<input type="password" placeholder="Password">
 			<button type="submit" id="login-button">Login</button>
 		</form>
 		<div class="login-help">
-			<a href="./signup.html">First Time? Sign up here</a>
+			<a href="{% url 'groupem:signup' %}">First Time? Sign up here</a>
 		</div>
 	</div>
 	
