--- a/groupem/templates/groupem/index.html
+++ b/groupem/templates/groupem/index.html
@@ -1,53 +1,51 @@
-{% load staticfiles %}
 <!DOCTYPE html>
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>Team Match login screen</title>
-    
-    
-    
-    
-        <link rel="stylesheet" href="{% static 'groupem/style.css' %}">
+    <title>Team Match login screen</title>  
+        <link rel="stylesheet" href="css/style.css">
 
-    
-    
-    
+  <style>
+  a {
+  	color: #53e3a6;
+    text-decoration: none;
+  }
+  </style>
   </head>
 
   <body>
 
     <div class="wrapper">
-	<div class="container">
-		<h1>Welcome</h1>
-		
-		<form action="" method="post" class="form">
-		  {% csrf_token %}
-			<input type="text" placeholder="Username">
-			<input type="password" placeholder="Password">
-			<button type="submit" id="login-button">Login</button>
-		</form>
-		<div class="login-help">
-			<a href="{% url 'groupem:signup' %}">First Time? Sign up here</a>
+		<div class="container">
+			<h1>Welcome</h1>
+			
+			<form class="form">
+				<input type="text" placeholder="Username">
+				<input type="password" placeholder="Password">
+				<button type="submit" id="login-button">Login</button>
+				<button type="submit" id="register-button"><a href="signup.html">Sign Up</a></button>
+			</form>
+			<!-- <div class="login-help">
+				<p><a href="/signup.html">First Time? Sign up here</a></p>
+			</div> -->
 		</div>
+		
+		<ul class="bg-bubbles">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
 	</div>
-	
-	<ul class="bg-bubbles">
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-		<li></li>
-	</ul>
-</div>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
-        <script src="js/index.js"></script>
+    <script src="js/index.js"></script>
 
     
     
