Adding a calender widget

--- a/groupem/templates/groupem/index.html
+++ b/groupem/templates/groupem/index.html
@@ -49,6 +49,8 @@
 
     <script src="js/index.js"></script>
 
+    <br />
+    <a href='{% templates "calendar.html" %}'> Calendar </a>
     
     
     
