--- a/groupem/templates/groupem/signup.html
+++ b/groupem/templates/groupem/signup.html
@@ -26,7 +26,7 @@
 			<input type="password" placeholder="Password">
 			<input type="password" placeholder="Confirm Password">
 			<select name="Role" dir="rtl" id="role">
-				<option value="Faculty">Faculty</option>
+				<option value="Faculty">Instructor</option>
 				<option value="Student">Student</option>
 			</select>
 			<br>
