Add calendar page

--- a/groupem/templates/groupem/index.html
+++ b/groupem/templates/groupem/index.html
@@ -50,7 +50,7 @@
     <script src="js/index.js"></script>
 
     <br />
-    <a href='{% templates "calendar.html" %}'> Calendar </a>
+{#    <a href="{% url 'groupem:calendar' %}"> Calendar </a>#}
     
     
     
