--- a/groupem/templates/groupem/calendar.html
+++ b/groupem/templates/groupem/calendar.html
@@ -1,16 +1,17 @@
+{% load staticfiles %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN""http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
 
 	<link rel='stylesheet' type='text/css' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/start/jquery-ui.css' />
-        <link rel='stylesheet' type='text/css' href="{% static 'jquery.weekcalendar.css' %}" />
-        <link rel='stylesheet' type='text/css' href="{% static 'demo.css' %}" />
-        <link rel='stylesheet' type='text/css' href="{% static 'reset.css' %}"/>
+        <link rel='stylesheet' type='text/css' href="{% static 'groupem/jquery.weekcalendar.css' %}" />
+        <link rel='stylesheet' type='text/css' href="{% static 'groupem/demo.css' %}" />
+        <link rel='stylesheet' type='text/css' href="{% static 'groupem/reset.css' %}"/>
 	
 	<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js'></script>
 	<script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js'></script>
-        <script type='text/javascript' src="{% static 'jquery.weekcalendar.js' %}"></script>
-        <script type='text/javascript' src="{% static 'demo.js' %}"></script>
+        <script type='text/javascript' src="{% static 'groupem/jquery.weekcalendar.js' %}"></script>
+        <script type='text/javascript' src="{% static 'groupem/demo.js' %}"></script>
 
 </head>
 <body> 
