--- a/groupem/templates/groupem/index.html
+++ b/groupem/templates/groupem/index.html
@@ -1,5 +1,7 @@
 {% load staticfiles %}
 
+{% load show_users %}
+
 <!DOCTYPE html>
 <html >
   <head>
@@ -16,13 +18,14 @@
   </head>
 
   <body>
-
+    {% render_header %}
     <div class="wrapper">
 		<div class="container">
 			<h1>Welcome</h1>
 			
-			<form class="form">
-				<input type="text" placeholder="Username">
+			<form class="form" action="{% url 'groupem:auth' %}" method="post">
+{% csrf_token %}
+				<input type="text" placeholder="Username" name="username">
 				<input type="password" placeholder="Password">
 				<button type="submit" id="login-button">Login</button>
 				<button type="submit" id="register-button"><a href="{% url 'groupem:signup' %}">Sign Up</a></button>
