Add logout button to calendar

--- a/groupem/templates/groupem/calendar.html
+++ b/groupem/templates/groupem/calendar.html
@@ -32,5 +32,11 @@
 			</ul>
 		</form>
 	</div>
+        <div id='fin' class="wrapper">
+            <form>
+                <button type="submit" id="logout"><a href="{% url 'groupem:index.html' %}">Logout</a></button>
+            </form>
+        </div>
+
 </body>
 </html>
