--- a/groupem/templates/groupem/calendar.html
+++ b/groupem/templates/groupem/calendar.html
@@ -34,7 +34,7 @@
 	</div>
         <div id='fin' class="wrapper">
             <form>
-                <button type="submit" id="logout"><a href="{% url 'groupem:index.html' %}">Logout</a></button>
+                <a href="{% url 'groupem:index' %}">Logout</a>
             </form>
         </div>
 
