Fix signup page for demo

--- a/groupem/templates/groupem/signup.html
+++ b/groupem/templates/groupem/signup.html
@@ -25,9 +25,9 @@
 			<input type="text" placeholder="Username" name="username" />
 			<input type="password" placeholder="Password">
 			<input type="password" placeholder="Confirm Password">
-			<select name="Role" dir="rtl" id="role">
-				<option value="Faculty">Instructor</option>
-				<option value="Student">Student</option>
+			<select name="Role" id="role">
+				<option value="Faculty">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Instructor</option>
+				<option value="Student">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Student</option>
 			</select>
 			<br>
 			<button type="submit" id="signup-button">Register</button>
