--- a/groupem/templates/groupem/index.html
+++ b/groupem/templates/groupem/index.html
@@ -18,10 +18,10 @@
   </head>
 
   <body>
-    {% render_header %}
+{#    {% render_header %}#}
     <div class="wrapper">
 		<div class="container">
-			<h1>Welcome</h1>
+			<h1>Welcome to Group 'em</h1>
 			
 			<form class="form" action="{% url 'groupem:auth' %}" method="post">
 {% csrf_token %}
