--- a/groupem/templates/groupem/index.html
+++ b/groupem/templates/groupem/index.html
@@ -21,7 +21,7 @@
 {#    {% render_header %}#}
     <div class="wrapper">
 		<div class="container">
-			<h1>Welcome to Group 'em</h1>
+			<h1>Welcome to group 'em!</h1>
 			
 			<form class="form" action="{% url 'groupem:auth' %}" method="post">
 {% csrf_token %}
